--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,68 @@ python = "^3.12"
 flask = "^3.1.0"
 flask-misaka = "^1.0.1"
 
+[tool.poetry.group.dev.dependencies]
+black = "^24.10.0"
+ruff = "^0.7.3"
+flake8 = "^7.1.1"
+isort = "^5.13.2"
+
+[tool.isort]
+profile = "black"
+
+[tool.ruff]
+line-length = 120
+indent-width = 4
+
+[tool.ruff.lint]
+select = [
+    # Enabling ALL is not recommended it will implicitly enable new rules after upgrade.
+    # "ALL",
+
+    # Ruff rules: https://docs.astral.sh/ruff/rules/
+
+    "E",      # pycodestyle erros
+    "W",      # pycodestyle warnings
+    "F",      # Pyflakes
+    "UP",     # pyupgrade
+    "I",      # isort
+    "B",      # flake8-bugbear
+    "SIM",    # flake8-simplify
+    "C4",     # flake8-comprehensions
+    "S",      # flake8-bandit
+    "D",      # pydocstyle - Enforce existing docstrings only
+    "C90",    # mccabe
+    "RUF",    # Ruff specific rules
+
+    # PL - Pylint is only partially supported, we also use the pylint tool to catch all the rules.
+    # It is enabled here to take advantage of the ruff's speed.
+    "PL",
+]
+
+ignore = [
+    # Conflicts with google docstring style
+    "D205",
+    # Allow missing docstring, remove to enforce docstrings across the board
+    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
+    # Disable line length check as it is handled by black
+    # :TODO: Remove E501 when ruff supports all black rules
+    "E501",
+    # indentation contains tabs
+    "W191",
+]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = [
+    # Allow use of assert statements in tests
+    "S101",
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
 
 [build-system]
 requires = ["poetry-core"]
